Add share base (delete and add user)
