# swagger_server/controllers/share_controller.py
@@ -2,7 +2,7 @@ import connexion
 import six
 
 from swagger_server import util
-
+import swagger_server.models.share_model as share_model
 
 def delete_shared_file(username, id_shared):  # noqa: E501
     """Delete File of User
@@ -16,7 +16,7 @@ def delete_shared_file(username, id_shared):  # noqa: E501
 
     :rtype: None
     """
-    return 'do some magic!'
+    return None
 
 
 def get_shared_file(username, id_shared):  # noqa: E501
@@ -47,27 +47,42 @@ def get_shared_list_file(username):  # noqa: E501
     return 'do some magic!'
 
 
-def share_file(username, item_type, name_shared, id_file, expiration, comment):  # noqa: E501
-    """Share file in Leobox
+def share_file_add(username, username_shared, id_file, expiration=None):  # noqa: E501
+    """Add user access to file
 
     This can access only by logger user # noqa: E501
 
     :param username: name of user
     :type username: str
-    :param item_type: Type of share (file or folder)
-    :type item_type: str
-    :param name_shared: name of who did you share file
-    :type name_shared: int
+    :param username_shared: name of who did you share file
+    :type username_shared: int
     :param id_file: ID of file shared
     :type id_file: int
     :param expiration: Date of expiration share
     :type expiration: str
-    :param comment: Comment for shared file
-    :type comment: str
 
     :rtype: None
     """
-    return 'do some magic!'
+    return share_model.adduser(username, username_shared, id_file, expiration)
+
+
+def share_file_delete(username, username_shared, id_file):  # noqa: E501
+    """Remove access to user to a file shared
+
+    This can access only by logger user # noqa: E501
+
+    :param username: name of user
+    :type username: str
+    :param username_shared: name of who did you share file
+    :type username_shared: int
+    :param id_file: ID of file shared
+    :type id_file: int
+    :param expiration: Date of expiration share
+    :type expiration: str
+
+    :rtype: None
+    """
+    return share_model.removeuser(username, username_shared, id_file)
 
 
 def updateshare_file(username, id_shared, item_type=None, expiration=None, comment=None):  # noqa: E501
